Delete example code

--- a/notebooks/2.0_feature_engineer.ipynb
+++ b/notebooks/2.0_feature_engineer.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# File data\n",
-    "csv = '../../data/fer_file_data.csv'\n",
+    "csv = '../data/fer_file_data.csv'\n",
     "df = pd.read_csv(csv)"
    ]
   },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 5,
    "id": "091da128",
    "metadata": {},
    "outputs": [
@@ -134,15 +134,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 35887 entries, 0 to 35886\n",
+      "RangeIndex: 35328 entries, 0 to 35327\n",
       "Data columns (total 3 columns):\n",
       " #   Column   Non-Null Count  Dtype \n",
       "---  ------   --------------  ----- \n",
-      " 0   usage    35887 non-null  object\n",
-      " 1   emotion  35887 non-null  int64 \n",
-      " 2   file     35887 non-null  object\n",
+      " 0   usage    35328 non-null  object\n",
+      " 1   emotion  35328 non-null  int64 \n",
+      " 2   file     35328 non-null  object\n",
       "dtypes: int64(1), object(2)\n",
-      "memory usage: 841.2+ KB\n"
+      "memory usage: 828.1+ KB\n"
      ]
     }
    ],
@@ -152,23 +152,635 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "acaa245c",
+   "execution_count": 98,
+   "id": "26828fd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all = {}\n",
+    "i, total = 0, len(object)\n",
+    "check = 0 \n",
+    "l = 0\n",
+    "for subject in object:\n",
+    "    i += 1\n",
+    "\n",
+    "    # Read in cropped data\n",
+    "    crop_names = os.listdir(os.path.join(dir, subject))\n",
+    "    crop_names = list(map(lambda x: os.path.join(dir, subject, x), crop_names)) \n",
+    "    crops = [cv.imread(x , cv.IMREAD_GRAYSCALE) for x in crop_names]\n",
+    "    l = l + len(crops)\n",
+    "\n",
+    "    # Get Features\n",
+    "    desc, length = extractFeatures(crops, feature)\n",
+    "    check = check + length\n",
+    "    all[subject] = desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "c23c8bd2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7066"
+       "array([[ 0.,  0.,  2., ..., 46., 16.,  7.],\n",
+       "       [ 2.,  1.,  0., ..., 23., 21.,  1.],\n",
+       "       [10.,  0.,  0., ..., 11.,  8.,  9.],\n",
+       "       ...,\n",
+       "       [40.,  0.,  1., ..., 14.,  1., 19.],\n",
+       "       [ 5.,  9.,  0., ...,  1.,  5., 23.],\n",
+       "       [33.,  0.,  0., ..., 87., 15.,  4.]], dtype=float32)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df[df['usage']=='test'])"
+    "all['angry'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "f10b95fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7178"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "7d12ebd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix, length = groupAllFeatures(all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "df4a91f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "171466"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "e6642cd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7065"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all['angry']) + len(all['sad']) + len(all['happy']) + len(all['neutral']) + len(all['surprise']) + len(all['fear'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "de05dd37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "43e55950",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans = trainKMeans(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "c24fe506",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(all['angry'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "id": "753dd345",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "171466"
+      ]
+     },
+     "execution_count": 411,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f3615ad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i, total = 0, len(object)\n",
+    "X = []\n",
+    "y = []\n",
+    "for subject in object:\n",
+    "    i += 1\n",
+    "\n",
+    "    # Get Features\n",
+    "    histograms = generateHistograms(all[subject], kmeans)\n",
+    "    X.extend(histograms)\n",
+    "    y.extend([subject] * len(histograms))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d622fdee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7176, 34)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(X).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "1373f811",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7176,)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(y).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "id": "2ffe62e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7176"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "fcfcee85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "831"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all[subject])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "id": "0372bae4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df = pd.DataFrame(zip(X, y), columns = ['histogram', 'emotion'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "id": "1474c4fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>histogram</th>\n",
+       "      <th>emotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[0, 0, 1, 4, 0, 1, 1, 0, 0, 2, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[0, 0, 0, 0, 1, 0, 1, 2, 1, 0, 0, 0, 1, 0, 0, ...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[0, 0, 0, 3, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[0, 1, 1, 0, 1, 0, 0, 1, 1, 2, 1, 0, 1, 1, 1, ...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[1, 0, 2, 2, 0, 0, 2, 1, 0, 1, 0, 0, 1, 1, 2, ...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7171</th>\n",
+       "      <td>[0, 0, 2, 0, 0, 0, 2, 1, 0, 0, 0, 1, 2, 0, 2, ...</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7172</th>\n",
+       "      <td>[0, 0, 3, 0, 2, 1, 3, 0, 1, 3, 0, 0, 2, 0, 1, ...</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7173</th>\n",
+       "      <td>[0, 1, 4, 0, 0, 0, 2, 0, 1, 0, 0, 0, 2, 1, 1, ...</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7174</th>\n",
+       "      <td>[1, 0, 0, 0, 2, 0, 0, 2, 0, 3, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7175</th>\n",
+       "      <td>[1, 1, 2, 2, 0, 0, 1, 2, 1, 2, 2, 0, 2, 0, 0, ...</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7176 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              histogram   emotion\n",
+       "0     [0, 0, 1, 4, 0, 1, 1, 0, 0, 2, 0, 0, 0, 0, 0, ...     angry\n",
+       "1     [0, 0, 0, 0, 1, 0, 1, 2, 1, 0, 0, 0, 1, 0, 0, ...     angry\n",
+       "2     [0, 0, 0, 3, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, ...     angry\n",
+       "3     [0, 1, 1, 0, 1, 0, 0, 1, 1, 2, 1, 0, 1, 1, 1, ...     angry\n",
+       "4     [1, 0, 2, 2, 0, 0, 2, 1, 0, 1, 0, 0, 1, 1, 2, ...     angry\n",
+       "...                                                 ...       ...\n",
+       "7171  [0, 0, 2, 0, 0, 0, 2, 1, 0, 0, 0, 1, 2, 0, 2, ...  surprise\n",
+       "7172  [0, 0, 3, 0, 2, 1, 3, 0, 1, 3, 0, 0, 2, 0, 1, ...  surprise\n",
+       "7173  [0, 1, 4, 0, 0, 0, 2, 0, 1, 0, 0, 0, 2, 1, 1, ...  surprise\n",
+       "7174  [1, 0, 0, 0, 2, 0, 0, 2, 0, 3, 0, 0, 0, 0, 0, ...  surprise\n",
+       "7175  [1, 1, 2, 2, 0, 0, 1, 2, 1, 2, 2, 0, 2, 0, 0, ...  surprise\n",
+       "\n",
+       "[7176 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 337,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "id": "c2762305",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 338,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(new_df.histogram[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "id": "4a09ac7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.to_csv('../../data/sift-train.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "id": "97b778fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>histogram</th>\n",
+       "      <th>emotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[0 0 1 4 0 1 1 0 0 2 0 0 0 0 0 1 0 0 1 1 0 0 1...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[0 0 0 0 1 0 1 2 1 0 0 0 1 0 0 2 0 0 1 0 1 1 0...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[0 0 0 3 1 0 0 1 1 1 0 0 0 0 0 1 1 0 1 1 0 1 0...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[0 1 1 0 1 0 0 1 1 2 1 0 1 1 1 1 5 0 2 4 1 0 0...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[1 0 2 2 0 0 2 1 0 1 0 0 1 1 2 2 1 0 1 0 0 1 1...</td>\n",
+       "      <td>angry</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           histogram emotion\n",
+       "0  [0 0 1 4 0 1 1 0 0 2 0 0 0 0 0 1 0 0 1 1 0 0 1...   angry\n",
+       "1  [0 0 0 0 1 0 1 2 1 0 0 0 1 0 0 2 0 0 1 0 1 1 0...   angry\n",
+       "2  [0 0 0 3 1 0 0 1 1 1 0 0 0 0 0 1 1 0 1 1 0 1 0...   angry\n",
+       "3  [0 1 1 0 1 0 0 1 1 2 1 0 1 1 1 1 5 0 2 4 1 0 0...   angry\n",
+       "4  [1 0 2 2 0 0 2 1 0 1 0 0 1 1 2 2 1 0 1 0 0 1 1...   angry"
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hist = pd.read_csv('../../data/sift-train.csv')\n",
+    "hist.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "id": "ed9745e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 341,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(hist.histogram[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "id": "c3e322c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/yd/vkjb_lqj2_30lnyhzhjqtg9w0000gp/T/ipykernel_21501/122645137.py:1: DeprecationWarning: string or file could not be read to its end due to unmatched data; this will raise a ValueError in the future.\n",
+      "  test = np.fromstring(hist.histogram[0], dtype=int, sep=' ')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=int64)"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = np.fromstring(hist.histogram[0], dtype=int, sep=' ')\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "id": "e3cd2f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = '../../data/sift-train.npy'\n",
+    "saveDescriptors(file, list(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "id": "4800c897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = '../../data/sift-train.npy'\n",
+    "arr = np.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "id": "fffd7878",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=float64)"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
    ]
   },
   {
@@ -176,7 +788,7 @@
    "id": "fa413472",
    "metadata": {},
    "source": [
-    "# SIFT"
+    "# Feature Transformation"
    ]
   },
   {
