Add PCA (EigenFace)

--- a/notebooks/2.0_feature_transformation.ipynb
+++ b/notebooks/2.0_feature_transformation.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "db821e5c",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f554a3e7",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "4  train        3  ../data/external/fer2013/train/happy/Training_..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "091da128",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "b08cc728",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
     "    \n",
     "    for i in range(len(descriptors)):\n",
     "        preds = kmeans.predict(descriptors[i].astype('float'))\n",
-    "        hist, bin_edges = np.histogram(a = preds, bins = range(0, k*5))\n",
+    "        hist, bin_edges = np.histogram(a = preds, bins = range(0, k))\n",
     "        histograms.append(hist)\n",
     "    \n",
     "    return histograms\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "e075d74c",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "28b9496b",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "08f5e7b7",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "9c703874",
    "metadata": {},
    "outputs": [
@@ -287,19 +287,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "acab447d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = len(df.emotion.unique())\n",
+    "k = len(df.emotion.unique()) * 5\n",
     "train_hist = histograms(k, train_descriptors_flat, train_descriptors)\n",
     "test_hist = histograms(k, test_descriptors_flat, test_descriptors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "257bf320",
    "metadata": {
     "scrolled": true
@@ -321,18 +321,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "id": "489c9d20",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4, 3, 5, 8, 2, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0])"
+       "array([0, 0, 0, 0, 0, 0, 1, 1, 3, 0, 0, 0, 2, 0, 2, 1, 0, 0, 0, 0, 0, 0,\n",
+       "       3, 1, 2, 1, 0, 0, 6])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "id": "52b0e3be",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "2167e7eb",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "id": "17d4e095",
    "metadata": {},
    "outputs": [
@@ -413,31 +413,31 @@
        "      <th>0</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>4 3 6 1 1 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...</td>\n",
+       "      <td>0 1 0 2 1 0 1 0 0 0 0 0 0 3 0 0 0 0 3 0 1 0 1 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>2 8 4 4 0 7 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...</td>\n",
+       "      <td>0 2 0 0 0 0 0 0 1 3 1 0 2 2 2 0 2 4 0 1 0 0 0 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>2 9 9 5 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...</td>\n",
+       "      <td>1 0 2 2 1 0 1 1 3 1 0 1 2 0 0 0 0 1 0 0 2 2 3 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>2 3 3 0 0 7 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...</td>\n",
+       "      <td>0 0 0 0 0 0 0 0 1 0 0 2 0 1 1 2 0 1 1 0 0 0 0 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>6 14 7 2 1 8 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...</td>\n",
+       "      <td>1 2 1 1 1 1 0 0 1 1 4 1 2 0 2 1 5 5 2 2 0 0 0 ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -445,14 +445,14 @@
       ],
       "text/plain": [
        "   usage  emotion                                          histogram\n",
-       "0  train        3  4 3 6 1 1 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...\n",
-       "1  train        3  2 8 4 4 0 7 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...\n",
-       "2  train        3  2 9 9 5 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...\n",
-       "3  train        3  2 3 3 0 0 7 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...\n",
-       "4  train        3  6 14 7 2 1 8 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0..."
+       "0  train        3  0 1 0 2 1 0 1 0 0 0 0 0 0 3 0 0 0 0 3 0 1 0 1 ...\n",
+       "1  train        3  0 2 0 0 0 0 0 0 1 3 1 0 2 2 2 0 2 4 0 1 0 0 0 ...\n",
+       "2  train        3  1 0 2 2 1 0 1 1 3 1 0 1 2 0 0 0 0 1 0 0 2 2 3 ...\n",
+       "3  train        3  0 0 0 0 0 0 0 0 1 0 0 2 0 1 1 2 0 1 1 0 0 0 0 ...\n",
+       "4  train        3  1 2 1 1 1 1 0 0 1 1 4 1 2 0 2 1 5 5 2 2 0 0 0 ..."
       ]
      },
-     "execution_count": 46,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "id": "7ab38865",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "id": "80d08b29",
    "metadata": {},
    "outputs": [],
