Make disgust as balanced. Create webcam live face expression detection.

--- a/notebooks/4.0_SVM.ipynb
+++ b/notebooks/4.0_SVM.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emotion_labels = {0:'angry', 2:'fear', 3:'happy', 4:'sad', 5:'surprise', 6:'neutral'}\n",
+    "emotion_labels = {0:'angry', 1:'disgust', 2:'fear', 3:'happy', 4:'sad', 5:'surprise', 6:'neutral'}\n",
     "target_labels = [val for key, val in emotion_labels.items()]\n",
     "targets = [key for key, val in emotion_labels.items()]"
    ]
@@ -341,22 +341,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "5c312ac3",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train = df[df['usage']=='train']\n",
     "df_test = df[df['usage']=='test']\n",
-    "train_data = load_data(df_train, 0)\n",
+    "train_data, train_scale = load_data(df_train, 0)\n",
     "train_target = list(df_train.emotion)\n",
-    "test_data = load_data(df_test, 0)\n",
+    "test_data, test_scale = load_data(df_test, 0)\n",
     "test_target = list(df_test.emotion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "0cbc5c9c",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "ed2507e7",
    "metadata": {},
    "outputs": [
@@ -377,10 +377,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28262, 2304)\n",
-      "(28262,)\n",
-      "(7066, 2304)\n",
-      "(7066,)\n"
+      "(31432, 2304)\n",
+      "(31432,)\n",
+      "(7896, 2304)\n",
+      "(7896,)\n"
      ]
     }
    ],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "id": "3df6b187",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.316\n"
+      "Test Accuracy: 0.388\n"
      ]
     }
    ],
@@ -1261,22 +1261,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "id": "457c7421",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train = df[df['usage']=='train']\n",
     "df_test = df[df['usage']=='test']\n",
-    "train_data = load_data(df_train, 0)\n",
+    "train_data, train_scale = load_data(df_train, 0)\n",
     "train_target = list(df_train.emotion)\n",
-    "test_data = load_data(df_test, 0)\n",
+    "test_data, test_scale = load_data(df_test, 0)\n",
     "test_target = list(df_test.emotion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "id": "dd1b1599",
    "metadata": {},
    "outputs": [],
@@ -1289,10 +1289,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "1ca6881e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chikakoolsen/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.364\n"
+     ]
+    }
+   ],
    "source": [
     "clf = make_pipeline(PCA(n_components=104, whiten=True),\n",
     "                       LinearSVC(C=1.0))\n",
@@ -1304,18 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "950c80c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(metrics.confusion_matrix(y_pred, y_test))\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "1e1ce376",
    "metadata": {},
    "outputs": [
@@ -1323,7 +1328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.488\n"
+      "Test Accuracy: 0.548\n"
      ]
     }
    ],
@@ -1466,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "id": "f7efd1a2",
    "metadata": {},
    "outputs": [],
@@ -1481,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "id": "40329dd2",
    "metadata": {},
    "outputs": [],
@@ -1494,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "id": "95b78a9b",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1515,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.378\n"
+      "Test Accuracy: 0.364\n"
      ]
     }
    ],
@@ -1525,31 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "48dd4264",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  80   54   47   77   19   44]\n",
-      " [  27   56   25   38   28   27]\n",
-      " [ 426  391 1376  451  195  499]\n",
-      " [ 174  166  141  361   77  190]\n",
-      " [ 102  180   81  105  424  102]\n",
-      " [ 148  177  104  215   88  371]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(confusion_matrix(y_pred, y_test))\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "a127b99b",
    "metadata": {},
    "outputs": [
@@ -1557,7 +1538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.491\n"
+      "Test Accuracy: 0.545\n"
      ]
     }
    ],
@@ -1568,6 +1549,38 @@
     "clf.fit(X_train, y_train)\n",
     "y_pred = clf.predict(X_test)\n",
     "print('Test Accuracy: %.3f' % clf.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2e8c5573",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(clf, open(\"../models/svm.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "6a800981",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred[0]"
    ]
   },
   {
