minor changes in existing notebooks

--- a/notebooks/ivan/7.2_im_TensorFlow_new dataset.ipynb
+++ b/notebooks/ivan/7.2_im_TensorFlow_new dataset.ipynb
@@ -212,6 +212,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* mdl1 - 3 x Conv (kernel=4) >> Flatten >> Dense(7) -- 6 min per epoch!\n",
+    "* mdl2 - 3 x Conv (kernel=3) >> Pooling(2) >> Flatten >> Dense(7) -- 1 min per epoch (-5min)\n",
+    "* mdl3 - same but kernel=4\n",
+    "* mdl4\n",
+    "* mdl5\n",
+    "* mdl6\n",
+    "* mdl7\n",
+    "* mdl8"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
@@ -794,13 +808,7 @@
       "898/898 [==============================] - 71s 79ms/step - loss: 0.4486 - accuracy: 0.8341 - val_loss: 1.3334 - val_accuracy: 0.5581\n",
       "Epoch 56/100\n",
       "898/898 [==============================] - 72s 80ms/step - loss: 0.4550 - accuracy: 0.8337 - val_loss: 1.3204 - val_accuracy: 0.5617\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "898/898 [==============================] - 71s 79ms/step - loss: 0.4424 - accuracy: 0.8367 - val_loss: 1.3425 - val_accuracy: 0.5503\n",
       "Epoch 58/100\n",
       "898/898 [==============================] - 71s 79ms/step - loss: 0.4401 - accuracy: 0.8412 - val_loss: 1.3908 - val_accuracy: 0.5598\n",
